@@ -14,6 +14,7 @@ import com.linkedin.data.ByteString;
 import com.linkedin.metadata.aspect.EnvelopedAspect;
 import com.linkedin.metadata.models.AspectSpec;
 import com.linkedin.metadata.models.EntitySpec;
+import com.linkedin.metadata.models.annotation.SearchableAnnotation;
 import com.linkedin.metadata.models.registry.EntityRegistry;
 import com.linkedin.metadata.query.filter.Condition;
 import com.linkedin.metadata.query.filter.Criterion;
@@ -290,7 +291,12 @@ public class ElasticSearchTimeseriesAspectService
       @Nullable final Filter filter) {
     final String indexName = _indexConvention.getTimeseriesAspectIndexName(entityName, aspectName);
     final BoolQueryBuilder filterQueryBuilder =
-        QueryBuilders.boolQuery().must(ESUtils.buildFilterQuery(filter, true));
+        QueryBuilders.boolQuery()
+            .must(
+                ESUtils.buildFilterQuery(
+                    filter,
+                    true,
+                    _entityRegistry.getEntitySpec(entityName).getSearchableFieldTypes()));
     CountRequest countRequest = new CountRequest();
     countRequest.query(filterQueryBuilder);
     countRequest.indices(indexName);
@@ -313,8 +319,11 @@ public class ElasticSearchTimeseriesAspectService
       @Nullable final Integer limit,
       @Nullable final Filter filter,
       @Nullable final SortCriterion sort) {
+    Map<String, Set<SearchableAnnotation.FieldType>> searchableFieldTypes =
+        _entityRegistry.getEntitySpec(entityName).getSearchableFieldTypes();
     final BoolQueryBuilder filterQueryBuilder =
-        QueryBuilders.boolQuery().must(ESUtils.buildFilterQuery(filter, true));
+        QueryBuilders.boolQuery()
+            .must(ESUtils.buildFilterQuery(filter, true, searchableFieldTypes));
     filterQueryBuilder.must(QueryBuilders.matchQuery("urn", urn.toString()));
     // NOTE: We are interested only in the un-exploded rows as only they carry the `event` payload.
     filterQueryBuilder.mustNot(QueryBuilders.termQuery(MappingsBuilder.IS_EXPLODED_FIELD, true));
@@ -324,7 +333,8 @@ public class ElasticSearchTimeseriesAspectService
               .setField(MappingsBuilder.TIMESTAMP_MILLIS_FIELD)
               .setCondition(Condition.GREATER_THAN_OR_EQUAL_TO)
               .setValue(startTimeMillis.toString());
-      filterQueryBuilder.must(ESUtils.getQueryBuilderFromCriterion(startTimeCriterion, true));
+      filterQueryBuilder.must(
+          ESUtils.getQueryBuilderFromCriterion(startTimeCriterion, true, searchableFieldTypes));
     }
     if (endTimeMillis != null) {
       Criterion endTimeCriterion =
@@ -332,7 +342,8 @@ public class ElasticSearchTimeseriesAspectService
               .setField(MappingsBuilder.TIMESTAMP_MILLIS_FIELD)
               .setCondition(Condition.LESS_THAN_OR_EQUAL_TO)
               .setValue(endTimeMillis.toString());
-      filterQueryBuilder.must(ESUtils.getQueryBuilderFromCriterion(endTimeCriterion, true));
+      filterQueryBuilder.must(
+          ESUtils.getQueryBuilderFromCriterion(endTimeCriterion, true, searchableFieldTypes));
     }
     final SearchSourceBuilder searchSourceBuilder = new SearchSourceBuilder();
     searchSourceBuilder.query(filterQueryBuilder);
@@ -400,7 +411,9 @@ public class ElasticSearchTimeseriesAspectService
   public DeleteAspectValuesResult deleteAspectValues(
       @Nonnull String entityName, @Nonnull String aspectName, @Nonnull Filter filter) {
     final String indexName = _indexConvention.getTimeseriesAspectIndexName(entityName, aspectName);
-    final BoolQueryBuilder filterQueryBuilder = ESUtils.buildFilterQuery(filter, true);
+    final BoolQueryBuilder filterQueryBuilder =
+        ESUtils.buildFilterQuery(
+            filter, true, _entityRegistry.getEntitySpec(entityName).getSearchableFieldTypes());
 
     final Optional<DeleteAspectValuesResult> result =
         _bulkProcessor
@@ -426,7 +439,9 @@ public class ElasticSearchTimeseriesAspectService
       @Nonnull Filter filter,
       @Nonnull BatchWriteOperationsOptions options) {
     final String indexName = _indexConvention.getTimeseriesAspectIndexName(entityName, aspectName);
-    final BoolQueryBuilder filterQueryBuilder = ESUtils.buildFilterQuery(filter, true);
+    final BoolQueryBuilder filterQueryBuilder =
+        ESUtils.buildFilterQuery(
+            filter, true, _entityRegistry.getEntitySpec(entityName).getSearchableFieldTypes());
     final int batchSize = options.getBatchSize() > 0 ? options.getBatchSize() : DEFAULT_LIMIT;
     TimeValue timeout =
         options.getTimeoutSeconds() > 0
@@ -450,7 +465,9 @@ public class ElasticSearchTimeseriesAspectService
       @Nonnull Filter filter,
       @Nonnull BatchWriteOperationsOptions options) {
     final String indexName = _indexConvention.getTimeseriesAspectIndexName(entityName, aspectName);
-    final BoolQueryBuilder filterQueryBuilder = ESUtils.buildFilterQuery(filter, true);
+    final BoolQueryBuilder filterQueryBuilder =
+        ESUtils.buildFilterQuery(
+            filter, true, _entityRegistry.getEntitySpec(entityName).getSearchableFieldTypes());
     try {
       return this.reindexAsync(indexName, filterQueryBuilder, options);
     } catch (Exception e) {
@@ -498,8 +515,12 @@ public class ElasticSearchTimeseriesAspectService
       int count,
       @Nullable Long startTimeMillis,
       @Nullable Long endTimeMillis) {
+
+    Map<String, Set<SearchableAnnotation.FieldType>> searchableFieldTypes =
+        _entityRegistry.getEntitySpec(entityName).getSearchableFieldTypes();
     final BoolQueryBuilder filterQueryBuilder =
-        QueryBuilders.boolQuery().filter(ESUtils.buildFilterQuery(filter, true));
+        QueryBuilders.boolQuery()
+            .filter(ESUtils.buildFilterQuery(filter, true, searchableFieldTypes));
 
     if (startTimeMillis != null) {
       Criterion startTimeCriterion =
@@ -507,7 +528,8 @@ public class ElasticSearchTimeseriesAspectService
               .setField(MappingsBuilder.TIMESTAMP_MILLIS_FIELD)
               .setCondition(Condition.GREATER_THAN_OR_EQUAL_TO)
               .setValue(startTimeMillis.toString());
-      filterQueryBuilder.filter(ESUtils.getQueryBuilderFromCriterion(startTimeCriterion, true));
+      filterQueryBuilder.filter(
+          ESUtils.getQueryBuilderFromCriterion(startTimeCriterion, true, searchableFieldTypes));
     }
     if (endTimeMillis != null) {
       Criterion endTimeCriterion =
@@ -515,7 +537,8 @@ public class ElasticSearchTimeseriesAspectService
               .setField(MappingsBuilder.TIMESTAMP_MILLIS_FIELD)
               .setCondition(Condition.LESS_THAN_OR_EQUAL_TO)
               .setValue(endTimeMillis.toString());
-      filterQueryBuilder.filter(ESUtils.getQueryBuilderFromCriterion(endTimeCriterion, true));
+      filterQueryBuilder.filter(
+          ESUtils.getQueryBuilderFromCriterion(endTimeCriterion, true, searchableFieldTypes));
     }
 
     SearchResponse response =
@@ -526,7 +549,7 @@ public class ElasticSearchTimeseriesAspectService
     List<Pair<EnvelopedAspect, GenericTimeseriesDocument>> resultPairs =
         Arrays.stream(response.getHits().getHits())
             .map(ElasticSearchTimeseriesAspectService::toEnvAspectGenericDocument)
-            .toList();
+            .collect(Collectors.toList());
 
     return TimeseriesScrollResult.builder()
         .numResults(totalCount)
@@ -537,7 +560,7 @@ public class ElasticSearchTimeseriesAspectService
   }
 
   private SearchResponse executeScrollSearchQuery(
-      @Nonnull final String entityNname,
+      @Nonnull final String entityName,
       @Nonnull final String aspectName,
       @Nonnull final QueryBuilder query,
       @Nonnull List<SortCriterion> sortCriterion,
@@ -560,7 +583,7 @@ public class ElasticSearchTimeseriesAspectService
     searchRequest.source(searchSourceBuilder);
     ESUtils.setSearchAfter(searchSourceBuilder, sort, null, null);
 
-    searchRequest.indices(_indexConvention.getTimeseriesAspectIndexName(entityNname, aspectName));
+    searchRequest.indices(_indexConvention.getTimeseriesAspectIndexName(entityName, aspectName));
 
     try (Timer.Context ignored =
         MetricUtils.timer(this.getClass(), "scrollAspects_search").time()) {
